* fixed minor design issue with first phenology step + added hover behavior to audio-img comp * fixed minor layout issue on project-home

--- a/src/app/components/audio-img/audio-img.component.less
+++ b/src/app/components/audio-img/audio-img.component.less
@@ -44,6 +44,12 @@
     margin-right: 0.5rem;
     background-position: center;
     background-size: contain;
+    opacity: 0.8;
+
+    &:hover {
+      cursor: pointer;
+      opacity: 1;
+    }
 
     &.playpause {
 
