--- a/src/app/components/phenology/observation/a-info/a-info.component.less
+++ b/src/app/components/phenology/observation/a-info/a-info.component.less
@@ -12,6 +12,7 @@ timepicker {
   position: relative;
   display: block;
   height: 350px;
+  margin-top: -1rem;
 
   > #activator {
     position: absolute;
@@ -74,6 +75,10 @@ timepicker {
 #selected-tree {
   margin-bottom: -0.25rem;
   z-index: -1;
+
+  > .list-group-item {
+    padding-bottom: 1.5rem;
+  }
 
   li {
     border: 0;
